--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@uploadthing/react": "^5.7.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
@@ -77,18 +78,30 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@headlessui/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "autoprefixer": "^10.4.20",
+    "dexie": "^4.0.8",
     "github-markdown-css": "^5.6.1",
+    "hast": "^1.0.0",
+    "highlight.js": "^11.10.0",
     "husky": "^9.0.11",
+    "i18next": "^23.12.3",
     "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.5.2",
+    "i18next-http-backend": "^2.6.1",
     "install": "^0.13.0",
     "lint-staged": "^15.2.7",
     "npm": "^10.8.3",
+    "postcss": "^8.4.41",
+    "postcss-cli": "^11.0.0",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "rc-slider": "^11.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
@@ -99,18 +112,6 @@
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "@headlessui/react": "^2.1.3",
-    "@heroicons/react": "^2.1.5",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "autoprefixer": "^10.4.20",
-    "dexie": "^4.0.8",
-    "hast": "^1.0.0",
-    "highlight.js": "^11.10.0",
-    "i18next": "^23.12.3",
-    "postcss": "^8.4.41",
-    "postcss-cli": "^11.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.2.2",
     "unist-util-visit": "^5.0.0"
